--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.0",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.14.9",
