--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-cross-picker": "^1.2.3",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-just-checkbox": "^1.0.12",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
@@ -35,6 +36,8 @@
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-stars": "^1.2.2",
     "react-native-web": "^0.17.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
