--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.14.9",
     "expo": "~42.0.1",
+    "expo-av": "^10.1.2",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
+    "expo-image-picker": "^11.0.3",
     "expo-localization": "~10.2.0",
     "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
