--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/montserrat": "^0.2.0",
+    "@react-native-community/slider": "^4.1.10",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.14.9",
@@ -38,6 +39,7 @@
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-native-slider": "^0.11.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-stars": "^1.2.2",
     "react-native-web": "^0.17.1",
