--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/montserrat": "^0.2.0",
     "@react-native-community/slider": "^4.1.10",
     "@react-navigation/bottom-tabs": "^6.0.7",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.14.9",
     "expo": "~42.0.1",
